--- a/login.html
+++ b/login.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Cozy Timer</title>
     <link rel="stylesheet" type="text/css" href="./public/styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f96873ad31.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
             <div class="back-to-home">
-                <h4><a href="homepage.html">Back to Home</a></h4>
+                <h4><a href="index.html"><i class="fa-solid fa-arrow-left-long"></i> Back to Home</a></h4>
             </div>
         </nav>
     </header>
@@ -20,11 +22,11 @@
         <form action="#" class="login-form">
             <div class="login-field">
                 <label for="email">Email address:</label>
-                <input type="email" name="email" id="email" placeholder="Email" required>
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="login-field">
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password" placeholder="Password" required>
+                <input type="password" name="password" id="password" required>
             </div>
             <div class="login-btn-container">
                 <button type="button" class="login-button">Login</button>
