--- a/sign-up.html
+++ b/sign-up.html
@@ -5,39 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | Cozy Timer</title>
     <link rel="stylesheet" type="text/css" href="./public/styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f96873ad31.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
             <div class="back-to-home">
-                <h4><a href="homepage.html">Back to Home</a></h4>
+                <h4><a href="index.html"><i class="fa-solid fa-arrow-left-long"></i> Back to Home</a></h4>
             </div>
         </nav>
     </header>
 
     <main>
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create a free account.</p>
+        <h1>Sign Up!</h1>
+        <p class="signup-paragraph">Please fill in this form to create a free account.</p>
         <form action="#" class="signup-form">
             <div class="signup-field">
                 <label for="first-name">First name:</label>
-                <input type="text" name="first-name" id="first-name" placeholder="First name" required>
+                <input type="text" name="first-name" id="first-name" required>
             </div>
             <div class="signup-field">
                 <label for="last-name">Last name:</label>
-                <input type="text" name="last-name" id="last-name" placeholder="Last name" required>
+                <input type="text" name="last-name" id="last-name" required>
             </div>
             <div class="signup-field">
                 <label for="email">Email address:</label>
-                <input type="email" name="email" id="email" placeholder="Email" required>
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="signup-field">
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password" placeholder="Password" required>
+                <input type="password" name="password" id="password" required>
             </div>
             <div class="signup-field">
                 <label for="confirm-password">Confirm password:</label>
-                <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm password" required>
+                <input type="password" name="confirm-password" id="confirm-password" required>
             </div>
             <div class="terms-conditions">
                 <p>By creating an account you agree to our <a href="#">Terms & Conditions</a>.</p>
