--- a/to-do-list.html
+++ b/to-do-list.html
@@ -5,28 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List | Cozy Timer</title>
     <link rel="stylesheet" type="text/css" href="./public/styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f96873ad31.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
         <div class="back-to-home">
-            <h4><a href="homepage.html">Back to Home</a></h4>
+            <h4><a href="index.html"><i class="fa-solid fa-arrow-left-long"></i> Back to Home</a></h4>
         </div>
+        
     </nav>
     
-    <div class="todolist-container">
-        <h1 class="todo-title">My To Do List</h1>
-        <input type="text" placeholder="add your tasks here">
-        <span>Add</span>
-    </div>
+    <main class="todolist">
+        <h1 id="toDoInput" class="todo-title">My To Do List</h1>
+        <div id="toDoDiv" class="todolist-container">
+            <input type="text" placeholder="add your tasks here">
+            <span class="todolist-add">Add</span>
+        </div>
 
-    <ul>
-        <li>re-watch lecture video</li>
-        <li>complete slideshow for presentation tomorrow at 9am</li>
-        <li>pay utility bill</li>
-    </ul>
+        <ul id="toDoUL" class="todolist-list">
+            <li>re-watch lecture video</li>
+            <li>complete slideshow for presentation tomorrow at 9am</li>
+            <li class="checked">pay utility bill</li>
+        </ul>
+    </main>    
 </body>
 </html>
 <!-- NOTES:
 - I want all of these pages that are clicked from the homepage as "modal" pages, meaning they pop up within the homepage rather than redirecting to a new page. I think it can only be done with JavaScript so these pages might look a little funky until then
+
+- The to-do list is gonna also look funky because it needs Javascript to function the way it shows on w3 schools
 -->
